4_kubernetes/sundaland-backend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sundaland-backend
  labels:
    app: sundaland
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sundaland
      component: backend
  template:
    metadata:
      labels:
        app: sundaland
        component: backend
    spec:
      containers:
        - name: sundaland-backend
          image: registry.cri.epita.fr/ing/majeures/tc/info/sundaland/sundaland-backend:1.0.0
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: sundaland-pull-secret
