4_kubernetes/sundaland-backend/service.yml
# FIXME
---
apiVersion: v1
kind: Service
metadata:
  name: sundaland-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sundaland
    component: backend
