4_kubernetes/sundaland-backend/ingress.yml
# FIXME
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sundaland-backend
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: sundaland-backend
            port:
              number: 8080
